--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   color: ^3.0.0
   firebase_core: ^2.16.0
   firebase_auth: ^4.10.0
+  flutter_map: ^6.0.1
+  latlong2: ^0.9.0
+  smooth_compass: ^2.0.17
 dev_dependencies:
   flutter_test:
     sdk: flutter
