--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   flutter_map: ^6.0.1
   latlong2: ^0.9.0
   smooth_compass: ^2.0.17
+  flutter_sliding_box: ^1.1.3
+  provider: ^6.1.1
+  realm: ^1.3.0
+  shared_preferences: ^2.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -72,8 +76,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+    - assets/
     - assets/icons/
     - assets/weather/
+    - assets/config/
     - lib/images/
 
   # To add assets to your application, add an assets section, like this:
